--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 # Collection of basic algorithms for everyday development
 
+[![Build Status](https://travis-ci.org/myduomilia/librualg.svg?branch=master)](https://travis-ci.org/myduomilia/librualg)
+
 ## LIst of algorithms:
 - Binary search algorithm.
